docs/pago-pa/saci/3.1.0/README.md
# Premessa

**Allegato A alle "Linee guida per l'effettuazione dei pagamenti elettronici a favore delle pubbliche amministrazioni e dei gestori di pubblici servizi" edite da PagoPA SpA - versione 3.1.0 - marzo 2023**

A decorrere dall'emanazione del decreto-legge 18 ottobre 2012, n. 179 convertito, con modificazioni, dalla legge 17 dicembre 2012, n. 221, sono state introdotte importanti modifiche all’articolo 5 del CAD (Effettuazione di pagamenti con modalità informatiche).&#x20;

Tutte le modifiche intercorse nel tempo sono state volte a favorire l’azzeramento del “_digital divide_” e lo sviluppo dell’utilizzo della moneta elettronica anche nei pagamenti verso le pubbliche amministrazioni e altri soggetti di interesse pubblico tramite la previsione di una piattaforma centralizzata per l'esecuzione di pagamenti pubblici.&#x20;

Al fine di dare pratica attuazione all’articolo 5 del CAD, l'Agenzia per l'Italia digitale, sentita la Banca d'Italia, come puntualmente previsto al comma 4 dello stesso articolo 5 del CAD, ha emanato e pubblicato il documento (di seguito, Linee guida) che, nell’illustrare le modalità da adottare per l’effettuazione di detti pagamenti, rimanda a specifici documenti tecnici.

Le presenti specifiche attuative rappresentano l’**Allegato A** alle citate Linee Guida e devono essere utilizzate in combinazione con quest’ultime, nonché con l'**Allegato B (SANP)**, documenti ai quali si rimanda per tutte le voci e gli argomenti qui non specificatamente indicati.

Nel seguito, indicheremo con la dicitura **“EC”** le pubbliche amministrazioni, le società a controllo pubblico o i gestori di pubblici servizi che, a vario titolo, sono creditori di somme nei confronti degli utilizzatori finali.

Come riportato nelle citate Linee guida, le presenti specifiche fanno riferimento agli standard internazionali SEPA che utilizzano il formato [UNIFI ISO 20022](http://www.iso20022.org/).

## Roadmap

La piattaforma pagoPA è in un percorso di continua evoluzione allo scopo di migliorare i servizi a favore dei Cittadini.&#x20;

Gli aggiornamenti della piattaforma sono comunicati a tutti gli Aderenti tramite un dedicato processo di comunicazione periodica a cadenza trimestrale.&#x20;

In questa versione delle SACI sono descritte le funzionalità attuali o che rientrano nel suddetto percorso di evoluzione.

{% hint style="info" %}
Per tutte le specifiche relative a funzionalità in essere o precedenti e non contemplate nel presente documento [è possibile far riferimento alla versione 2.0.0](https://app.gitbook.com/o/KXYtsf32WSKm6ga638R3/s/E6d6iTzjBzUfzNoZjadZ/)
{% endhint %}
